[gd_scene load_steps=4 format=3 uid="uid://cucnnxsjd32ea"]

[ext_resource type="Script" uid="uid://ck5ehc26pny4j" path="res://addons/godotmon/src/ui/events/nodes/comment_frame.gd" id="1_t15c5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8v6c"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l8v6c"]

[node name="CommentFrame" type="GraphElement"]
custom_minimum_size = Vector2(256, 256)
resizable = true
script = ExtResource("1_t15c5")

[node name="Background" type="Panel" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l8v6c")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextColorButton" type="ColorPickerButton" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0

[node name="BackgroundColorButton" type="ColorPickerButton" parent="Background/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
color = Color(1, 1, 1, 1)

[node name="TextEdit" type="TextEdit" parent="Background/MarginContainer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_l8v6c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l8v6c")
text = "test"
scroll_fit_content_height = true
scroll_fit_content_width = true

[connection signal="resized" from="Background/MarginContainer/HBoxContainer" to="." method="_on_h_box_container_resized"]
[connection signal="color_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/TextColorButton" to="." method="_on_text_color_button_color_changed"]
[connection signal="color_changed" from="Background/MarginContainer/HBoxContainer/VBoxContainer/BackgroundColorButton" to="." method="_on_background_color_button_color_changed"]
